--- a/app/src/main/res/layout/cardview.xml
+++ b/app/src/main/res/layout/cardview.xml
@@ -49,8 +49,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:button="@drawable/nolike"
-                android:layout_weight="0.33"
-                android:layout_padding="10dp">
+                android:layout_weight="0.33">
             </CheckBox>
             <ImageView
                 android:layout_width="wrap_content"
