--- a/app/src/main/res/layout/activity_registrar_restaurante.xml
+++ b/app/src/main/res/layout/activity_registrar_restaurante.xml
@@ -5,20 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".registrarRestauranteActivity">
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         tools:ignore="MissingConstraints"
         android:layout_gravity="center">
+
         <RelativeLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/imagen">
+                android:id="@+id/imagen"
+                android:src="@drawable/imagenblanco">
 
             </ImageView>
         </RelativeLayout>
@@ -72,6 +76,7 @@
                 android:padding="5dp"/>
 
         </LinearLayout>
-    </LinearLayout>
 
+    </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
