--- a/app/src/main/res/layout/cardview.xml
+++ b/app/src/main/res/layout/cardview.xml
@@ -13,6 +13,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
+                android:id="@+id/imagen"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/restaurante">
@@ -46,12 +47,14 @@
             android:orientation="horizontal"
             android:weightSum="1">
             <CheckBox
+                android:id="@+id/megusta"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:button="@drawable/nolike"
                 android:layout_weight="0.33">
             </CheckBox>
             <ImageView
+                android:id="@+id/localizar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ubicacion"
@@ -59,6 +62,7 @@
 
             </ImageView>
             <ImageView
+                android:id="@+id/compartir"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/compartir"
